@@ -42,6 +42,8 @@ Version 1.3
  - Started Implementing the Central Scene CC - With a good start by
    tmartinez69009 - We still need to figure out the Capabilities decode -
    Issue 367 (Justin)
+ - Fixed issue 425 - Bail out of Decrypting Packets if they are too short
+   (Justin)
 
 Version 1.2 
  - Released on 15/10/14
